--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,36 @@
 body {
     text-align: center;
-}
+    background-color: rgb(202, 216, 228);
+} 
   
 
-.table {
-    width: 600px;
-    border: 1px solid black;
+table {
+    width: 800px;   
+    border: 2px solid black;
     margin: auto;
+    border-collapse: collapse;
+    
 }
+
 td {
-    text-align: center;
-    border: 1 px solid grey;
+    text-align: left;
+    border: 2px solid grey;
+         
 }
+
+th {
+    border:2px solid black;
+   
+    background-color: rgb(146, 212, 146);   
+}
+.center,h4 {
+    text-align: center;   
+}
+p {
+    text-align:justify;
+}
+.center {
+    background-color: white;
+
+}
+
